# clipkeeper_rust

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md  build.sh  install.sh
docs/: SECURE_LOGGING.md
examples/: metadata_demo.rs  secure_logging_demo.rs
src/: app.rs  cli.rs  clipboard_monitor.rs  clipboard_service.rs  config.rs  content_classifier.rs  errors.rs  history_store.rs  lib.rs  logger.rs  main.rs  privacy_filter.rs  resource_monitor.rs  retention_service.rs  search_service.rs  service.rs  time_utils.rs
tests/: config_enhanced_get_set_test.rs  config_fields_test.rs  config_permissions_test.rs  config_validation_test.rs  property_hash_change_detection.proptest-regressions  property_hash_change_detection.rs  property_log_json_validity.proptest-regressions  property_log_json_validity.rs  property_sha256_change_detection.rs  search_service_integration_test.rs  secure_logging_file_test.rs  secure_logging_integration.rs  unit_clipboard_monitor.rs
