[package]
name = "clipkeeper"
version = "0.3.0"
edition = "2021"
authors = ["Matt Passman"]
description = "Smart clipboard history manager with automatic content classification and privacy filtering"
license = "MIT"

[lib]
name = "clipkeeper"
path = "src/lib.rs"

[[bin]]
name = "clipkeeper"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "uuid"] }
arboard = { version = "3.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
ahash = "0.8"
directories = "5.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
dialoguer = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
thiserror = "1.0"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"
nix = { version = "0.29", features = ["signal"] }
libc = "0.2"

[target.'cfg(not(target_os = "linux"))'.dependencies]
sysinfo = "0.30"
[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
criterion = "0.5"

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
